@@ -805,9 +805,11 @@ public class DBUpgradeClient {
 	private static File _jarDir;
 	private static final List<String> _reflectionOpens = Arrays.asList(
 		"--add-opens=java.base/java.lang=ALL-UNNAMED",
+		"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
 		"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
 		"--add-opens=java.base/java.net=ALL-UNNAMED",
 		"--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+		"--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED",
 		"--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
 		"--add-opens=jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED");
 
